--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3         # фикс для tar-warning
+        uses: actions/checkout@v3 
         with:
           ref: ${{ github.event.inputs.tag }}
 
