--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      HOST: root@109.107.190.28
+      HOST: root@jj-vpn.duckdns.org
       DEPLOY_DIRECTORY: /root/weatherbot
       ENV_FILE_PATH: /root/weatherbot/.env
 
@@ -40,7 +40,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H 109.107.190.28 >> ~/.ssh/known_hosts
+          ssh-keyscan -H jj-vpn.duckdns.org >> ~/.ssh/known_hosts
 
       - name: Deploy binary via rsync
         run: |
